# SimComp

./: CMakeLists.txt  LICENSE  README.md  example.txt
src/: SimComp.cpp  utils.cpp  utils.h
zlib/lib/pkgconfig/: zlib.pc
